# BlacklistEngine_GitV2

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: CodeCoverage.cmake
src/: CMakeLists.txt  Database.cpp  Database.h  Engine.cpp  Engine.h  EngineHandler.cpp  EngineHandler.h  JsonHelper.cpp  JsonHelper.h  Utils.h  main.cpp
